--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -13,6 +13,8 @@
     "@tanstack/react-query": "^5.62.3",
     "antd": "^5.22.4",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
